# mccp

./: Makefile.in  configure  configure.ac
mk/: autogen.sh  beautify  deplibs.mk  doDosText.sh.in  doxygen.conf  finalizeconfig  initdepend.in  rules.mk  updateheaderconfig  vars.mk.in
src/include/mccp/: Makefile.in  mccp.h  mccp_bbq.h  mccp_cbuffer.h  mccp_chrono.h  mccp_config.h.in  mccp_error.h  mccp_gstate.h  mccp_hashmap.h  mccp_heapcheck.h  mccp_includes.h  mccp_lock.h  mccp_logger.h  mccp_macros.h  mccp_module_apis.h  mccp_perror.h  mccp_pipeline_stage.h  mccp_pipeline_stage_funcs.h  mccp_pipeline_stage_internal.h  mccp_platform.h.in  mccp_qmuxer.h  mccp_signal.h  mccp_strutils.h  mccp_sysdep.h.in  mccp_thread.h  mccp_thread_internal.h  mccp_types.h
src/include/mccp/sysdep/: mccp_sysdep_darwin.h  mccp_sysdep_posix.h
src/lib/: Makefile.in  cbuffer.c  chrono.c  error.c  gstate.c  hash.h  hashmap.c  heapcheck.c  lock.c  logger.c  module.c  pipeline_stage.c  pipeline_worker.c  qmuxer.c  qmuxer_internal.h  qmuxer_types.h  qpoll.c  signal.c  strutils.c  thread.c
src/lib/check/: Makefile.in  check0.c  check1-a.c  check1.c  check10-a.c  check10.c  check2.c  check3.c  check4.c  check5.c  check6.c  check7.c  check8.c  check9.c  dummy-main.c  dummy-module.c
